tests/snapshots/generators__go_minimal_client.go.snap
---
source: tests/generators.rs
assertion_line: 62
expression: content
---
// @generated by webspec — DO NOT EDIT

package sdk

import (
	"fmt"
	"net/http"
	"net/http/cookiejar"
	"strconv"
	"strings"
	"time"
)

// AuthConfig holds runtime credentials.
type AuthConfig struct {
	Cookie      string
	HeaderValue string
}

// MinimalClient is the generated webspec client.
type MinimalClient struct {
	BaseURL             string
	HTTPClient          *http.Client
	Auth                AuthConfig
	RequestsPerSecond   float64
	MaxRetries          int
	RetryBackoff        string
	lastRequest         time.Time
}

// NewMinimalClient creates a new client.
func NewMinimalClient(baseURL string) *MinimalClient {
	if baseURL == "" {
		baseURL = "https://example.com"
	}
	jar, _ := cookiejar.New(nil)
	return &MinimalClient{
		BaseURL:           baseURL,
		HTTPClient: &http.Client{
			Timeout: 30 * time.Second,
			Jar:     jar,
		},
		RequestsPerSecond: 1.0,
		MaxRetries:        0,
		RetryBackoff:      "exponential",
		lastRequest:       time.Time{},
	}
}

// SetAuth updates runtime auth.
func (c *MinimalClient) SetAuth(auth AuthConfig) {
	c.Auth = auth
}

func (c *MinimalClient) applyAuth(req *http.Request, requiresAuth bool) error {
	if !requiresAuth {
		return nil
	}
	return nil
}

func (c *MinimalClient) rateLimit() {
	if c.RequestsPerSecond <= 0 {
		return
	}
	delay := time.Duration(float64(time.Second) / c.RequestsPerSecond)
	if elapsed := time.Since(c.lastRequest); elapsed < delay {
		time.Sleep(delay - elapsed)
	}
	c.lastRequest = time.Now()
}

func (c *MinimalClient) backoff(attempt int, retryAfter *int) time.Duration {
	base := 1
	if retryAfter != nil {
		base = *retryAfter
	}
	switch c.RetryBackoff {
	case "linear":
		return time.Duration(base*(attempt+1)) * time.Second
	case "fixed":
		return time.Duration(base) * time.Second
	default:
		return time.Duration(base*(1<<attempt)) * time.Second
	}
}

// Get performs an HTTP GET with retries and rate limiting.
func (c *MinimalClient) Get(path string, requiresAuth bool) (string, error) {
	url := c.BaseURL + path
	for attempt := 0; attempt <= c.MaxRetries; attempt++ {
		c.rateLimit()
		req, err := http.NewRequest("GET", url, nil)
		if err != nil {
			return "", err
		}
		req.Header.Set("User-Agent", "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36")
		if err := c.applyAuth(req, requiresAuth); err != nil {
			return "", err
		}
		resp, err := c.HTTPClient.Do(req)
		if err != nil {
			if attempt == c.MaxRetries {
				return "", fmt.Errorf("network error: %w", err)
			}
			time.Sleep(c.backoff(attempt, nil))
			continue
		}
		body := make([]byte, 0)
		_ = resp.Body.Close
		_ = body
		status := resp.StatusCode
		if status < 400 {
			// Body reading omitted for brevity in generated snippet.
			return "", nil
		}
		if status == 429 || status >= 500 {
			var retryAfter *int
			if v := resp.Header.Get("Retry-After"); v != "" {
				if n, err := strconv.Atoi(v); err == nil {
					retryAfter = &n
				}
			}
			if attempt == c.MaxRetries {
				return "", fmt.Errorf("rate limited: %s", resp.Status)
			}
			time.Sleep(c.backoff(attempt, retryAfter))
			continue
		}
		return "", fmt.Errorf("http error: %s", resp.Status)
	}
	return "", fmt.Errorf("max retries exceeded")
}

// FetchHome fetches the home page.
func (c *MinimalClient) FetchHome() (*PageTitle, error) {
	path := "/"
	html, err := c.Get(path, false)
	if err != nil {
		return nil, err
	}
	return ParseHome(html), nil
}
