tests/snapshots/generators__go_minimal_errors.go.snap
---
source: tests/generators.rs
assertion_line: 62
expression: content
---
// @generated by webspec — DO NOT EDIT

package sdk

import "fmt"

// ParseError indicates a selector or conversion failure.
type ParseError struct {
	Message string
}

func (e ParseError) Error() string {
	return fmt.Sprintf("parse error: %s", e.Message)
}

// AuthError indicates missing or invalid credentials.
type AuthError struct {
	Message string
}

func (e AuthError) Error() string {
	return fmt.Sprintf("auth error: %s", e.Message)
}

// NetworkError indicates a transport failure.
type NetworkError struct {
	Message string
}

func (e NetworkError) Error() string {
	return fmt.Sprintf("network error: %s", e.Message)
}

// RateLimitError indicates the server returned 429.
type RateLimitError struct {
	RetryAfter int
}

func (e RateLimitError) Error() string {
	return fmt.Sprintf("rate limited: retry after %ds", e.RetryAfter)
}

// TimeoutError indicates a request timeout.
type TimeoutError struct {
	After int
}

func (e TimeoutError) Error() string {
	return fmt.Sprintf("timeout after %ds", e.After)
}

// DriftError indicates a critical selector was missing.
type DriftError struct {
	Selector string
	Context  string
}

func (e DriftError) Error() string {
	return fmt.Sprintf("drift detected: %s (%s)", e.Selector, e.Context)
}

// SDKError is the root error type returned by the client.
type SDKError struct {
	Kind    string
	Message string
}

func (e SDKError) Error() string {
	return fmt.Sprintf("%s: %s", e.Kind, e.Message)
}
