tests/snapshots/generators__go_minimal_models.go.snap
---
source: tests/generators.rs
assertion_line: 62
expression: content
---
// @generated by webspec — DO NOT EDIT

package sdk

import "encoding/json"

// PageTitle model.
type PageTitle struct {
    Value string `json:"value"`
}
