tests/snapshots/generators__go_minimal_parser.go.snap
---
source: tests/generators.rs
assertion_line: 62
expression: content
---
// @generated by webspec — DO NOT EDIT

package sdk

import (
	"strings"

	"golang.org/x/net/html"
)

// selectOne returns the first element matching the CSS selector.
func selectOne(n *html.Node, selector string) *html.Node {
	var result *html.Node
	var walk func(*html.Node)
	walk = func(node *html.Node) {
		if result != nil {
			return
		}
		if node.Type == html.ElementNode && matchesSelector(node, selector) {
			result = node
			return
		}
		for c := node.FirstChild; c != nil; c = c.NextSibling {
			walk(c)
		}
	}
	walk(n)
	return result
}

// matchesSelector performs a minimal CSS selector match.
func matchesSelector(n *html.Node, selector string) bool {
	selector = strings.TrimSpace(selector)
	if selector == "" {
		return false
	}
	for _, a := range n.Attr {
		if a.Key == "class" {
			classes := strings.Fields(a.Val)
			for _, c := range classes {
				if c == selector[1:] {
					return true
				}
			}
		}
	}
	return n.Data == selector
}

// text returns the concatenated text content of an element.
func text(n *html.Node) string {
	if n == nil {
		return ""
	}
	var out strings.Builder
	var walk func(*html.Node)
	walk = func(node *html.Node) {
		if node.Type == html.TextNode {
			out.WriteString(node.Data)
		}
		for c := node.FirstChild; c != nil; c = c.NextSibling {
			walk(c)
		}
	}
	walk(n)
	return strings.TrimSpace(out.String())
}

// attr returns the value of an attribute on an element.
func attr(n *html.Node, key string) string {
	if n == nil {
		return ""
	}
	for _, a := range n.Attr {
		if a.Key == key {
			return a.Val
		}
	}
	return ""
}

// parseNode parses a single HTML document.
func parseNode(html string) *html.Node {
	n, err := html.Parse(strings.NewReader(html))
	if err != nil {
		return nil
	}
	return n
}

// ParseHome parses the home page.
func ParseHome(html string) *PageTitle {
	doc := parseNode(html)
	return parsePageTitle(doc)
}

func parsePageTitle(n *html.Node) PageTitle {
	return PageTitle{
		Value: [object],
	}
}
