tests/snapshots/generators__go_minimal_types.go.snap
---
source: tests/generators.rs
assertion_line: 62
expression: content
---
// @generated by webspec — DO NOT EDIT

package sdk
