tests/snapshots/generators__python_minimal_pyproject.toml.snap
---
source: tests/generators.rs
assertion_line: 50
expression: content
---
[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minimal-sdk"
version = "0.1.0"
description = "Auto-generated SDK for Minimal"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]
