tests/snapshots/generators__rust_minimal_Cargo.toml.snap
---
source: tests/generators.rs
expression: content
---
# @generated by webspec — DO NOT EDIT
# Source: Minimal

[package]
name = "minimal-sdk"
version = "0.1.0"
edition = "2021"
description = "Auto-generated SDK for Minimal"
license = "MIT"

[dependencies]
reqwest = { version = "0.12", features = ["json", "cookies", "rustls-tls"] }
scraper = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
log = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
